# Algorithm_code

./: .gitignore  .gitmodules  .tags  .tags1  LeetCode_102.cpp  LeetCode_109.cpp  LeetCode_122_stock.cpp  LeetCode_13.cpp  LeetCode_14.cpp  LeetCode_142.cpp  LeetCode_148.cpp  LeetCode_15.cpp  LeetCode_160.cpp  LeetCode_167_hash_map.py  LeetCode_17.cpp  LeetCode_171.cpp  LeetCode_19.cpp  LeetCode_20.cpp  LeetCode_200.cpp  LeetCode_207_TopoSort.cpp  LeetCode_210_TopoSort.cpp  LeetCode_27.cpp  LeetCode_278.cpp  LeetCode_279.cpp  LeetCode_28.cpp  LeetCode_287.cpp  LeetCode_33.cpp  LeetCode_412.cpp  LeetCode_441.cpp  LeetCode_442.cpp  LeetCode_443.cpp  LeetCode_445.cpp  LeetCode_448_On_space.py  LeetCode_459.cpp  LeetCode_475.cpp  LeetCode_520.cpp  LeetCode_530.cpp  LeetCode_551.cpp  LeetCode_56.cpp  LeetCode_566_2d_vector.py  (+13 more)
Cellular_autometa/: main.py
algorithm/: README.md
autohotkey/: README.md  map_win.ahk
c10k/: requirements.txt
calculator/: README.md  app.py  calc.xlsx  calculator_core.py  config.yaml  formulas_bak.yaml  requirements.txt  storage_calculator.py  test_storage_calculator.py
callback/: callback.cc
cmake_cpp_lib/: CMakeLists.txt  README.md
cmake_cpp_lib/static_link_dynamic_link/: CMakeLists.txt
cmake_cpp_lib/static_link_dynamic_link/demolib2/: CMakeLists.txt
cpp/: LeetCode_1_Hash_Table.cpp  LeetCode_2.cpp
demo_micromark_markdown/: example.md  exportASTJSON.js  exportHtml.js  main.js  output.json  package-lock.json  package.json
demo_pytest/: test_a.py
demo_regex/: keepalived.conf  new.conf  rm_keepalived_content.py
demo_vscode/: file.txt  main.js  package.json
design_pattern/: README.md
elk/: README.md  elasticsearch.yml  filebeat.yml  hosts  logstash.conf
fault_catch/: fault.py
learn_aio/: CMakeLists.txt  DESIGN.md  IO_URING_INTEGRATION.md  Makefile  README.md  SANITIZER_GUIDE.md  SANITIZER_INTEGRATION.md  build_with_sanitizer.sh  compare_engines.sh  test.sh  test_nanobench  test_sanitizers.sh
learn_aio/src/: aio_engine.cpp  aio_engine.h  benchmark.cpp  benchmark.h  benchmark_perf.cpp  benchmark_perf.h  config.cpp  config.h  io_engine.h  main.cpp  nanobench_impl.cpp  stats.cpp  stats.h  uring_engine.cpp  uring_engine.h  utils.cpp  utils.h
learn_aio/tools/: CMakeLists.txt  README.md  aio.fio  test_nanobench.cpp  uring.fio
learn_jaeger_agent/: demo.py  main.py  main_propagator.py  pyproject.toml
learn_opentelemetry/python/: main.py  pyproject.toml
paxos/: main.py  (+5 more)
run_to_complete/: CMakeLists.txt  README.md  rtc_demo.cpp  rtc_demo.hpp  run_perf_test.sh  traditional_demo.cpp
script/spider_learn/: README.md  output.json  pyproject.toml
script/spider_learn/tutorial/tutorial/: items.py  middlewares.py  pipelines.py  settings.py
script/spider_learn/tutorial/tutorial/spiders/: image.py  learn_scrapy.py  links.py
simulate_producer_consumer/: CMakeLists.txt  README.md  client.py  guide.md  multi_client.py  producer_consumer_pb2_grpc.py  project_structure.md  queue_benchmark.c  queue_benchmark.cpp
simulate_producer_consumer/benchmarks/: CMakeLists.txt  queue_benchmark.cpp
simulate_producer_consumer/benchmarks/tools/: csv_writer.hpp
simulate_producer_consumer/docs/principles/: stage1_mutex.md  stage2_spsc.md  stage3_mpmc.md  stage4_smr.md  stage5_cache.md
simulate_producer_consumer/examples/: CMakeLists.txt
simulate_producer_consumer/examples/basic_usage/: CMakeLists.txt  simple_producer_consumer.cpp
simulate_producer_consumer/grpc_service/: requirements.txt
simulate_producer_consumer/grpc_service/proto/: producer_consumer.proto
simulate_producer_consumer/grpc_service/server/: producer_consumer_pb2.py  server.py
simulate_producer_consumer/results/: test_summary.csv
simulate_producer_consumer/results/20250820_232312/: env.txt  latency.csv  summary.csv
simulate_producer_consumer/results/20250820_234324/: env.txt
simulate_producer_consumer/results/20250820_234413/: env.txt  latency.csv  summary.csv
simulate_producer_consumer/results/tests/20250820_234317/: unit_tests.xml
simulate_producer_consumer/scripts/: build.sh  run_benchmarks.sh  run_tests.sh
simulate_producer_consumer/src/stage1_basics/: mutex_queue.hpp
simulate_producer_consumer/src/stage2_spsc/: spsc_ring_buffer.hpp
simulate_producer_consumer/src/stage3_mpmc/: aba_safe_queue.hpp  lockfreequeue.cpp  michael_scott_queue.hpp  mpmc_lockfree_queue.hpp
simulate_producer_consumer/src/stage4_smr/: epoch_based_reclamation.hpp  hazard_pointers.hpp
simulate_producer_consumer/src/stage5_performance/: performance_comparison.hpp  performance_optimized_queue.hpp
simulate_producer_consumer/src/stage6_cpp23/: latch_semaphore_queue.hpp  ranges_coroutine_queue.hpp
simulate_producer_consumer/src/stage7_distributed/: kafka_client.hpp  rabbitmq_client.hpp
simulate_producer_consumer/tasks/: prd-comprehensive-queue-analysis.md
simulate_producer_consumer/tests/: CMakeLists.txt
simulate_producer_consumer/tests/integration/: CMakeLists.txt  test_producer_consumer.cpp
simulate_producer_consumer/tests/scripts/: run_all_tests.sh.in
simulate_producer_consumer/tests/unit/: CMakeLists.txt  test_benchmark_tools.cpp  test_cpp23_features.cpp  test_distributed_messaging.cpp  test_mpmc_queue.cpp  test_mutex_queue.cpp  test_performance_optimization.cpp  test_smr.cpp  test_spsc_queue.cpp
thread_pool/: .clangd  CMakeLists.txt  README.md
thread_pool/benchmark/: CMakeLists.txt
thread_pool/benchmark/include/: benchmark_framework.hpp
thread_pool/benchmark/scripts/: analyze_results.py  run_all_benchmarks.sh  run_perf_analysis.sh
thread_pool/benchmark/src/: benchmark_cpu_intensive.cpp  benchmark_executor.cpp  benchmark_io_intensive.cpp  benchmark_memory_allocation.cpp  benchmark_optimization_comparison.cpp  benchmark_threadpool_comparison.cpp  factories_and_reporter.cpp  main_benchmark.cpp  task_generators.cpp  thread_pool_adapters.cpp
thread_pool/examples/: CMakeLists.txt  basic_usage.cpp
thread_pool/include/thread_pool/: thread_pool.hpp  thread_pool_original.hpp
thread_pool/src/: CMakeLists.txt
thread_pool/tests/: CMakeLists.txt  thread_pool_test.cpp
(+664 files in other folders)
