[tool.poetry]
name = "learn_jaeger_agent"
version = "0.1.0"
description = "test jaeger python agent"
authors = ["sean10 <sean10reborn@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
jaeger-client = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
